--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -5,6 +5,7 @@ height: 88px;
 z-index: 2;
 color: white;
 }
+p{font-size: 20px}
 
 img{width:100%;
 height:898px}
@@ -40,12 +41,15 @@ list-style-type: none;}
   h1{font-size: 30px}
 img{height: 337px}
 .images{height: 340px}
-.mainholder{height: 680px}
-.mainholder2{height: 560px}
-.sidebar{height: 197px}
+.mainholder{height: 869px}
+.mainholder2{height: 814px}
+.sidebar{width: 30%;
+  height: 197px;
+}
+li{font-size: 17px;}
 }
 
 @media only screen and ( min-width:768px) {
-.mainholder{height: 1123px}
-.mainholder2{height: 1064px;}
+.mainholder{height: 1225px}
+.mainholder2{height: 1181px;}
 }
